# AppFlowy

./: .diff  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .tool-versions  Brewfile  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  Makefile.toml  README.md  ROADMAP.md  SECURITY.md  We help you build even better products: Binarys.it  codemagic.yaml  commitlint.config.js  env.mk  gandalf_botti.py  inlang.config.js  install.sh  package.json  project.inlang.json
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  prepare-build.sh  rust-toolchain  rustfmt.toml  sqlx-data.json
backend/configuration/: base.example.yaml  local.yaml  production.yaml
backend/doc/: database_setup.md  database_struct.md
backend/migrations/: 20210819065837_user.sql  20210824033032_workspace.sql  20210824033742_app.sql  20210824033748_view.sql  20210909115140_doc.sql  20211015065001_trash.sql  20211221061753_kv.sql
backend/scripts/: Makefile  docker_env.sh  docker_test.sh  env.sh  init_database.sh
backend/scripts/database/: database.mk  db_init.sh  docker.sh  init_database.sh  init_postgres.sh
backend/src/: application.rs  context.rs  errors.rs  lib.rs  main.rs  startup.rs
backend/src/config/: config.rs  configuration.rs  const_define.rs  env.rs  mod.rs
backend/src/doc_service/: doc.rs  mod.rs  router.rs  sql_builder.rs
backend/src/entities/: doc.rs  logged_user.rs  mod.rs  response.rs  response_serde.rs  server_code.rs  token.rs  user.rs  workspace.rs
backend/src/middleware/: auth_middleware.rs  cors_middleware.rs  mod.rs
backend/src/routers/: helper.rs  mod.rs  user.rs  user_router.rs  utils.rs  ws.rs
backend/src/service/: mod.rs  util.rs
backend/src/services/: log.rs  mod.rs
backend/src/sqlx_ext/: mod.rs  query.rs  utils.rs
backend/src/user_service/: auth.rs  auth_service.rs  logged_user.rs  mod.rs  router.rs  utils.rs
backend/src/util/: mod.rs  serde_ext.rs  user_ext.rs
backend/src/web_socket/: biz_handler.rs  router.rs  ws_client.rs  ws_server.rs
backend/src/workspace_service/: mod.rs
backend/src/ws_service/: mod.rs  router.rs  ws_client.rs  ws_server.rs
backend/tests/: helper.rs  main.rs
backend/tests/api/: auth.rs  doc.rs  helper.rs  main.rs  mod.rs  workspace.rs  ws.rs
backend/tests/api_test/: auth_test.rs  kv_test.rs  mod.rs  workspace_test.rs
backend/tests/document/: edit.rs  edit_script.rs  edit_test.rs  helper.rs  mod.rs  ws.rs
backend/tests/document_test/: crud_test.rs  edit_script.rs  edit_test.rs  mod.rs
backend/tests/util/: helper.rs  mod.rs
backend/tests/ws/: helper.rs  ws.rs
cloud-lib/: Cargo.toml
frontend/rust-lib/: .gitignore  Cargo.toml  Cargo_BACKUP_75010.toml  build_android_sdk.sh  build_droid.sh  rust-toolchain  rust-toolchain.toml  rustfmt.toml
frontend/rust-lib/.cargo/: config.toml
frontend/rust-lib/backend-service/: Cargo.toml
frontend/rust-lib/collab-integrate/: Cargo.toml
frontend/rust-lib/dart-ffi/: Cargo.toml  Flowy.toml  binding.h  build.rs
frontend/rust-lib/dart-notify/: Cargo.toml  Flowy.toml  build.rs
frontend/rust-lib/event-integration/: Cargo.toml
frontend/rust-lib/event-integration-test/: Cargo.toml
rust-lib/: .gitignore  Cargo.toml  rust-toolchain  rustfmt.toml
rust-lib/.cargo/: config.toml
rust-lib/backend-api/: Cargo.toml
rust-lib/dart-ffi/: Cargo.toml  Flowy.toml  binding.h
rust-lib/dart-notify/: Cargo.toml
rust-lib/flowy-backend-api/: Cargo.toml
rust-lib/flowy-dart-notify/: Cargo.toml
rust-lib/flowy-database/: Cargo.toml
rust-lib/flowy-db/: Cargo.toml
rust-lib/flowy-dispatch/: Cargo.toml
rust-lib/flowy-document/: Cargo.toml  Flowy.toml
rust-lib/flowy-document-infra/: Cargo.toml
rust-lib/flowy-editor/: Cargo.toml
rust-lib/flowy-infra/: Cargo.toml  Flowy.toml
rust-lib/flowy-log/: Cargo.toml
rust-lib/flowy-net/: Cargo.toml
rust-lib/flowy-observable/: Cargo.toml  Flowy.toml
rust-lib/flowy-ot/: Cargo.toml
rust-lib/flowy-protobuf/: Cargo.toml  rustfmt.toml
rust-lib/flowy-sdk/: Cargo.toml
rust-lib/flowy-sqlite/: Cargo.toml
rust-lib/flowy-sys/: Cargo.toml
rust-lib/flowy-test/: Cargo.toml
rust-lib/flowy-user/: Cargo.toml  Flowy.toml
rust-lib/flowy-user-infra/: Cargo.toml
rust-lib/flowy-workspace/: Cargo.toml  Flowy.toml
rust-lib/flowy-workspace-infra/: Cargo.toml
rust-lib/flowy-ws/: Cargo.toml  Flowy.toml
rust-lib/lib-dispatch/: Cargo.toml
rust-lib/lib-infra/: Cargo.toml  Flowy.toml
rust-lib/lib-log/: Cargo.toml
rust-lib/lib-ot/: Cargo.toml
rust-lib/lib-ws/: Cargo.toml
server/: Cargo.toml
server/src/: context.rs  lib.rs  main.rs  startup.rs
shared-lib/: Cargo.toml  rust-toolchain.toml  rustfmt.toml
shared-lib/backend-service/: Cargo.toml
shared-lib/database-model/: Cargo.toml
shared-lib/document-model/: Cargo.toml
shared-lib/error-code/: Cargo.toml  Flowy.toml  build.rs
shared-lib/flowy-client-network-config/: Cargo.toml
shared-lib/flowy-client-ws/: Cargo.toml
shared-lib/flowy-codegen/: Cargo.toml
shared-lib/flowy-collaboration/: Cargo.toml  build.rs
shared-lib/flowy-core-data-model/: Cargo.toml
shared-lib/flowy-core-infra/: Cargo.toml  Flowy.toml
shared-lib/flowy-derive/: Cargo.toml
shared-lib/flowy-error-code/: Cargo.toml  Flowy.toml
shared-lib/flowy-folder-data-model/: Cargo.toml  Flowy.toml  build.rs
shared-lib/flowy-grid-data-model/: Cargo.toml  Flowy.toml
shared-lib/flowy-http-model/: Cargo.toml
shared-lib/flowy-server-sync/: Cargo.toml
shared-lib/flowy-sync/: Cargo.toml  Flowy.toml
shared-lib/flowy-user-data-model/: Cargo.toml  Flowy.toml  build.rs
shared-lib/flowy-user-infra/: Cargo.toml
shared-lib/folder-model/: Cargo.toml
shared-lib/folder-rev-model/: Cargo.toml
shared-lib/grid-model/: Cargo.toml
shared-lib/grid-rev-model/: Cargo.toml
shared-lib/lib-infra/: Cargo.toml
shared-lib/lib-ot/: Cargo.toml  Flowy.toml
shared-lib/lib-ws/: Cargo.toml  Flowy.toml  build.rs
shared-lib/revision-model/: Cargo.toml
shared-lib/user-model/: Cargo.toml
shared-lib/ws-model/: Cargo.toml
(+12159 files in other folders)
