[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-http = "2.2.1"
actix-web-actors = "3"
actix-codec = "0.3"

futures = "0.3.15"
bytes = "0.5"
toml = "0.5.8"
dashmap = "4.0"
log = "0.4.14"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
derive_more = {version = "0.99", features = ["display"]}
protobuf = {version = "2.20.0"}
flowy-log = { path = "../rust-lib/flowy-log" }
flowy-user = { path = "../rust-lib/flowy-user" }

[dependencies.sqlx]
version = "0.5.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]




[lib]
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"