[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
#actix-web = "3"
#actix-http = "2.2.1"
#actix-web-actors = "3"
actix-codec = "0.3"
actix-web = "4.0.0-beta.8"
actix-http = "3.0.0-beta.8"
actix-rt = "2"
actix-web-actors = { version = "4.0.0-beta.6" }
actix-service = "2.0.0-beta.5"
actix-identity = "0.4.0-beta.2"
#actix-cors = "0.5.4"

futures = "0.3.15"
bytes = "1"
toml = "0.5.8"
dashmap = "4.0"
log = "0.4.14"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde-aux = "1.0.1"
derive_more = {version = "0.99"}
protobuf = {version = "2.20.0"}
uuid = { version = "0.8", features = ["serde", "v4"] }
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.40"
thiserror = "1.0.24"
bcrypt = "0.10"
jsonwebtoken = "7.2"
sql-builder = "3.1.1"
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }


flowy-log = { path = "../rust-lib/flowy-log" }
flowy-user = { path = "../rust-lib/flowy-user" }
flowy-workspace = { path = "../rust-lib/flowy-workspace" }
flowy-net = { path = "../rust-lib/flowy-net", features = ["http"] }

ormx = { version = "0.7", features = ["postgres"]}
[dependencies.sqlx]
version = "0.5.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
    "any",
]


[lib]
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[dev-dependencies]
once_cell = "1.7.2"
linkify = "0.5.0"
flowy-user = { path = "../rust-lib/flowy-user" }
flowy-workspace = { path = "../rust-lib/flowy-workspace" }