[workspace]
members = [
  "flowy-dispatch",
  "flowy-sdk",
  "dart-ffi",
  "flowy-log",
  "flowy-user",
  "flowy-user-infra",
  "flowy-ast",
  "flowy-derive",
  "flowy-test",
  "flowy-sqlite",
  "flowy-database",
  "flowy-infra",
  "flowy-workspace",
  "flowy-workspace-infra",
  "flowy-dart-notify",
  "flowy-document",
  "flowy-ot",
  "flowy-net",
  "flowy-ws",
]

exclude = ["../backend"]

[profile.dev]
split-debuginfo = "unpacked"
