[workspace]
members = [
  "lib-ot",
  "lib-ws",
  "lib-infra",
  "document-model",
  "ws-model",
  "revision-model",
  "flowy-sync",
  "flowy-client-network-config",
  "flowy-client-ws",
]

[profile.dev]
opt-level = 0
#https://doc.rust-lang.org/rustc/codegen-options/index.html#debug-assertions
#split-debuginfo = "unpacked"
