[workspace]
members = [
  "lib-ot",
  "lib-infra",
  "flowy-derive",
  "flowy-ast",
  "flowy-codegen",
]

[profile.dev]
opt-level = 0
#https://doc.rust-lang.org/rustc/codegen-options/index.html#debug-assertions
#split-debuginfo = "unpacked"


[workspace.dependencies]
anyhow = "1.0.75"
tracing = "0.1.40"
serde = "1.0.108"
serde_json = "1.0.108"
tokio = "1.34.0"
async-trait = "0.1.74"
chrono = { version = "0.4.31",  default-features = false, features = ["clock"] }
