[package]
name = "flowy-log"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1" }
tracing-log = { version = "0.1.1", features = ["env_logger"]}
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.2"
tracing-appender = "0.1"
log = "0.4.14"