[package]
name = "flowy-net"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
protobuf = {version = "2.18.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
actix-web = {version = "3", optional = true}
pin-project = "1.0.0"
futures-core = { version = "0.3", default-features = false }

[features]
http = ["actix-web"]