[package]
name = "flowy-net"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
hyper = "0.14"
protobuf = {version = "2.18.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
pin-project = "1.0.0"
futures-core = { version = "0.3", default-features = false }
log = "0.4"
bytes = "1.0"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
actix-web = {version = "4.0.0-beta.8", optional = true}
derive_more = {version = "0.99", features = ["display"]}
flowy-derive = { path = "../flowy-derive" }


[features]
http = ["actix-web"]